[package]
name = "cargo"
version = "0.1.0"
authors = ["roaldi <corbett.ferguson@habitual-media.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
win-event-log = { git ="https://github.com/rustysec/win-event-log-rs"}
regex ={ version = "1.4.6" }
